--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "black==25.1.0",
+    "deepeval==3.2.9",
     "fastapi==0.115.14",
     "langchain==0.3.27",
     "langchain-community==0.3.27",
